k8s/routes/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
# requires a traefik instance with the kubernetes provider enabled

kind: IngressRoute
metadata:
  name: apikeystore
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/apikeystore/`) && Method(`GET`)
      kind: Rule
      services:
        - kind: Service
          name: apikeystore
          scheme: http
          port: http
      middlewares:
        - name: apikeystore-strip-ingressroute-prefix
    - match: PathPrefix(`/apikeystore/`) && Method(`POST`, `PUT`, `PATCH`, `DELETE`)
      kind: Rule
      services:
        - kind: Service
          name: apikeystore
          scheme: http
          port: http
          # port: http2
      middlewares:
        - name: apikeystore-strip-ingressroute-prefix

  tls:
    secretName: hoy-app-dev
